k8s/base/traefik-config/traefik-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
      protocol: TCP
