k8s/base/traefik-config/argocd-webhook-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: github-only
  namespace: argocd
spec:
  ipAllowList:
    sourceRange:
      - 192.30.252.0/22
      - 185.199.108.0/22
      - 140.82.112.0/20
      - 143.55.64.0/20
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-webhook
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k8s.vicio.ovh`) && Path(`/api/webhook`)
      kind: Rule
      middlewares:
        - name: github-only
          namespace: argocd
      services:
        - name: argocd-server
          port: 80
  tls: {}
