k8s/base/traefik-config/private-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: headlamp
      services:
        - name: headlamp
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: kube-system
      services:
        - name: hubble-ui
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gatus.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: gatus
      services:
        - name: gatus
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks
  namespace: goldilocks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`goldilocks.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: goldilocks
      services:
        - name: goldilocks-dashboard
          port: 80
  tls: {}
