k8s/base/traefik-config/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
